argocd/server-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.termz.xyz`) || Host(`argocd.terminalnode.xyz`)
      priority: 10
      services:
        - name: argocd-server
          port: http
    - kind: Rule
      match: (Host(`argocd.termz.xyz`) || Host(`argocd.terminalnode.xyz`)) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: http
          scheme: h2c
#  tls:
#    certResolver: default
